week-infra/placeholder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week-infra-placeholder
spec:
  type: ClusterIP
  selector:
    app: week-infra-placeholder
  ports:
    - name: http
      port: 80
      targetPort: 80
